; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_patterns.c_check_capture.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_patterns.c_check_capture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.match_state = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@CAP_UNFINISHED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"invalid capture index\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.match_state*, i32)* @check_capture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_capture(%struct.match_state* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.match_state*, align 8
  %5 = alloca i32, align 4
  store %struct.match_state* %0, %struct.match_state** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = sub nsw i32 %6, 49
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %27, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.match_state*, %struct.match_state** %4, align 8
  %13 = getelementptr inbounds %struct.match_state, %struct.match_state* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp sge i32 %11, %14
  br i1 %15, label %27, label %16

16:                                               ; preds = %10
  %17 = load %struct.match_state*, %struct.match_state** %4, align 8
  %18 = getelementptr inbounds %struct.match_state, %struct.match_state* %17, i32 0, i32 1
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = load i32, i32* %5, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @CAP_UNFINISHED, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %16, %10, %2
  %28 = load %struct.match_state*, %struct.match_state** %4, align 8
  %29 = call i32 @match_error(%struct.match_state* %28, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  store i32 %29, i32* %3, align 4
  br label %32

30:                                               ; preds = %16
  %31 = load i32, i32* %5, align 4
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %30, %27
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @match_error(%struct.match_state*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
